--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+2
+version: 1.0.2+3
 
 environment:
   sdk: ^3.5.3
@@ -64,6 +64,7 @@ dependencies:
   flutter_shimmer: ^2.1.2
   shimmer: ^3.0.0
   loading_indicator: ^3.1.1
+  appwrite: ^13.0.0
 
 dev_dependencies:
   flutter_test:
