--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   shimmer: ^3.0.0
   loading_indicator: ^3.1.1
   appwrite: ^13.0.0
+  argon2: ^1.0.1
 
 dev_dependencies:
   flutter_test:
